--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "keras>=3.12.0",
     "numpy>=2.3.4",
     "rouge>=1.0.1",
+    "rouge-score>=0.1.2",
     "tensorflow>=2.20.0",
 ]
